# aws-lambda-env-modeler

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  lib_requirements.txt  llms-full.txt  llms.txt  mkdocs.yml  package.json  pyproject.toml  requirements.txt  zensical.toml
.github/: dependabot.yml
.github/workflows/: cicd.yml  codeql-analysis.yml.yml  pr-labeler.yml  python-publish.yml  scorecard.yml
aws_lambda_env_modeler/: __init__.py  modeler.py  modeler_impl.py  types.py
aws_lambda_env_vars_parser/: parser.py
cdk/my_service/: api_construct.py  constants.py  service_stack.py
docs/: getting-started.md  getting_started.md  index.md  testing.md  usage.md
docs/best_practices/: environment_variables.md
docs/examples/best_practices/environment_variables/: my_handler.py
docs/snippets/: my_handler.py  schema.py
search/: search_index.json
service/handlers/: create_order.py
service/handlers/schemas/: env_vars.py
snippets/: my_handler.py  pytest.py  schema.py
tests/unit/: test_cache.py  test_env_vars_parser.py
