[tool.poetry]
name = "aws_lambda_env_modeler"
version = "1.0.3"
description = "AWS-Lambda-Env-Modeler is a Python library designed to simplify the process of managing and validating environment variables in your AWS Lambda functions."
authors = ["Ran Isenberg"]
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
repository="https://github.com/ran-isenberg/aws-lambda-env-modeler"
readme = "README.md"
keywords = ["environment variables parser", "aws lambda", "serverless best practices", "aws serverless", "lambda environment variables"]
license = "MIT-0"
packages = [
    { include = "aws_lambda_env_modeler" }]

[tool.poetry.urls]
"Issue tracker" = "https://github.com/ran-isenberg/aws-lambda-env-modeler/issues"
"Releases" = "https://github.com/ran-isenberg/aws-lambda-env-modeler/releases"


[tool.poetry.dependencies]
python = "^3.8.17 || ^3.9.0 || ^3.10.0 || ^3.11.0"
pydantic = {version = "^2.0.0"}

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pycodestyle = "*"
pytest-cov = "*"
pytest-html = "*"
python-dateutil = "*"
python-dotenv = "*"
GitPython = "*"
yapf = "*"
radon = "*"
xenon = "*"
pre-commit = "*"
flake8 = "*"
isort = "*"
mkdocs-material = "*"
mkdocs-git-revision-date-plugin = "*"
types-cachetools = "*"
mypy = "*"
types-requests = "*"
toml = "*"
wheel = "*"
setuptools = "*"
